--- a/.github/workflows/Angular.yml
+++ b/.github/workflows/Angular.yml
@@ -10,10 +10,8 @@ permissions:
   id-token: write
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node.js
@@ -23,19 +21,11 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy to external repo
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          path: dist/ArrayCamp/browser/
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          deploy_key: ${{ secrets.DEPLOY_KEY }}
+          external_repository: tinevervloet/arraycamp.github.io
+          publish_branch: main
+          publish_dir: dist/ArrayCamp/browser
+          force_orphan: true
