--- a/.github/workflows/Angular.yml
+++ b/.github/workflows/Angular.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Deploy to external repo
         uses: peaceiris/actions-gh-pages@v4
         with:
-          deploy_key: ${{ secrets.DEPLOY_KEY }}
+          personal_token: ${{ secrets.GH_TOKEN }}
           external_repository: tinevervloet/arraycamp.github.io
           publish_branch: main
           publish_dir: dist/ArrayCamp/browser
