--- a/.github/workflows/Angular.yml
+++ b/.github/workflows/Angular.yml
@@ -25,7 +25,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           personal_token: ${{ secrets.GH_TOKEN }}
-          external_repository: tinevervloet/arraycamp.github.io
+          external_repository: arraycamp/arraycamp.github.io
           publish_branch: main
           publish_dir: dist/ArrayCamp/browser
           force_orphan: true
